--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <section id="profile">
-        <div class="section__pic-container">
+        <div class="section__pic-container" id="glowcard">
             <img src="Assets/profile.png" alt="Profile Picture">
         </div>
         <div class="section__text">
