--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
                     <br><br>
                     Let's build something remarkable <span>together!</span>
-                </p>
+                </p> <br><br>
+                
             </div>
         </div>
 
@@ -70,6 +71,7 @@
 
     <div class="image-track-container">
         <h2>Hobbies / Likes</h2>
+        <img src="Assets/arrow3.png" alt="">
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
             <div class="image-container">
                 <img src="Assets/programming.avif"alt="" draggable="false">
